--- a/Dockerfile-automated
+++ b/Dockerfile-automated
@@ -10,15 +10,13 @@ RUN apk -U upgrade \
     && apk add tzdata \
     && rm -rf /var/cache/apk/*
 
-ARG TARGETPLATFORM="linux/amd64"
+ARG TARGETPLATFORM
 ARG S6_VERSION=2.1.0.2
 
 COPY ./install /tmp/install
-RUN apk add --no-cache --virtual .install curl \
-    && chmod +x /tmp/install \
+RUN chmod +x /tmp/install \
     && /tmp/install \
-    && rm -rf /tmp/* \
-    && apk del --no-cache .install
+    && rm -rf /tmp/*
 
 COPY ./overlay /
 
