--- a/Dockerfile-automated
+++ b/Dockerfile-automated
@@ -1,5 +1,7 @@
 FROM alpine:3.12.1
 
+ARG TARGETPLATFORM="linux/amd64"
+
 LABEL maintainer="Ben Green <ben@bcgdesign.com>" \
     org.label-schema.name="Alpine + S6" \
     org.label-schema.version="latest" \
@@ -10,7 +12,6 @@ RUN apk -U upgrade \
     && apk add tzdata \
     && rm -rf /var/cache/apk/*
 
-ARG TARGETPLATFORM
 ARG S6_VERSION=2.1.0.2
 
 COPY ./install /tmp/install
