--- a/Dockerfile-automated
+++ b/Dockerfile-automated
@@ -8,6 +8,8 @@ LABEL maintainer="Ben Green <ben@bcgdesign.com>" \
     org.label-schema.vendor="Ben Green" \
     org.label-schema.schema-version="1.0"
 
+ENV ENV="/etc/profile"
+
 RUN apk -U upgrade \
     && apk add tzdata \
     && rm -rf /var/cache/apk/*
