--- a/Dockerfile-automated
+++ b/Dockerfile-automated
@@ -21,7 +21,7 @@ RUN apk -U upgrade \
 COPY ./overlay /
 
 ARG S6_VERSION=2.1.0.2
-RUN chmod +x /tmp/install /usr/local/bin/_* \
+RUN chmod +x /tmp/install /usr/bin/_* \
     && /tmp/install \
     && rm -rf /tmp/*
 
