--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -35,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          platforms: linux/amd64,linux/arm/v7,linux/arm64
+          platforms: windows/amd64,linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bcgdesign/alpine-s6:latest
             bcgdesign/alpine-s6:${{ steps.version.outputs.content }}
