--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -22,7 +22,7 @@ jobs:
         working-directory: .
         run: |
           docker login -u $env:USERNAME -p $env:PASSWORD
-          Get-Content Dockerfile | docker build -
+          Get-Content Dockerfile-windows | docker build -
           docker image push bcgdesign/alpine-s6:latest
           docker image push bcgdesign/alpine-s6:${{ steps.version.outputs.content }}
           docker logout
