--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -37,6 +37,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./Dockerfile-dev
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
