--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -1,11 +1,7 @@
-name: build-main
+name: build-dev
 
 on:
   push:
-    branches: dev
-    paths-ignore:
-      - '*.code-workspace'
-      - 'README.md'
 
 jobs:
   main:
@@ -37,8 +33,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: .
-          file: ./Dockerfile-dev
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
