--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -16,7 +16,19 @@ jobs:
         name: Checkout code
         uses: actions/checkout@v2
       -
-        name: Read version
+        name: Read Alpine version - minor
+        uses: bencgreen/read-file-action@v1
+        with:
+          path: ./ALPINE_MINOR
+        id: alpine_minor
+      -
+        name: Read Alpine version - revision
+        uses: bencgreen/read-file-action@v1
+        with:
+          path: ./ALPINE_REVISION
+        id: alpine_revision
+      -
+        name: Read image version
         uses: bencgreen/read-file-action@v1
         with:
           path: ./VERSION
@@ -43,6 +55,8 @@ jobs:
           tags: |
             bcgdesign/alpine-s6:latest
             bcgdesign/alpine-s6:${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine-${{ steps.alpine_minor.outputs.content }}
+            bcgdesign/alpine-s6:alpine-${{ steps.alpine_revision.outputs.content }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
