--- a/.github/workflows/build_3_12-dev.yml
+++ b/.github/workflows/build_3_12-dev.yml
@@ -1,15 +1,15 @@
-name: build-main
+name: 3.12-dev
 
 on:
   push:
     branches:
-      - 'main'
+      - '**'
     tags-ignore:
       - '**'
     paths:
-      - '.github/workflows/build-main.yml'
+      - '.github/workflows/build_3_12-dev.yml'
+      - '3.12/**'
       - 'overlay/**'
-      - 'VERSION'
 
 jobs:
   main:
@@ -18,24 +18,6 @@ jobs:
       -
         name: Checkout code
         uses: actions/checkout@v2
-      -
-        name: Read Alpine version - minor
-        uses: bencgreen/read-file-action@v1
-        with:
-          path: ./ALPINE_MINOR
-        id: alpine_minor
-      -
-        name: Read Alpine version - revision
-        uses: bencgreen/read-file-action@v1
-        with:
-          path: ./ALPINE_REVISION
-        id: alpine_revision
-      -
-        name: Read image version
-        uses: bencgreen/read-file-action@v1
-        with:
-          path: ./VERSION
-        id: version
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -53,13 +35,12 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./3.12/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:latest
-            bcgdesign/alpine-s6:${{ steps.version.outputs.content }}
-            bcgdesign/alpine-s6:alpine-${{ steps.alpine_minor.outputs.content }}
-            bcgdesign/alpine-s6:alpine-${{ steps.alpine_revision.outputs.content }}
+            bcgdesign/alpine-s6:dev
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
