--- a/.github/workflows/build_3_12-main.yml
+++ b/.github/workflows/build_3_12-main.yml
@@ -1,11 +1,16 @@
-name: build-dev
+name: 3.12-main
 
 on:
   push:
     branches:
-      - '**'
+      - 'main'
     tags-ignore:
       - '**'
+    paths:
+      - '.github/workflows/build_3_12-main.yml'
+      - '3.12/**'
+      - 'overlay/**'
+      - 'VERSION'
 
 jobs:
   main:
@@ -14,6 +19,18 @@ jobs:
       -
         name: Checkout code
         uses: actions/checkout@v2
+      -
+        name: Read Alpine version - revision
+        uses: bencgreen/read-file-action@v1
+        with:
+          path: ./3.12/ALPINE_REVISION
+        id: alpine_revision
+      -
+        name: Read image version
+        uses: bencgreen/read-file-action@v1
+        with:
+          path: ./VERSION
+        id: version
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -31,10 +48,13 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./3.12/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:dev
+            bcgdesign/alpine-s6:alpine-3.12
+            bcgdesign/alpine-s6:alpine-${{ steps.alpine_revision.outputs.content }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
