--- a/Dockerfile-automated
+++ b/Dockerfile-automated
@@ -1,6 +1,6 @@
 FROM alpine:3.13.1
 
-ARG TARGETPLATFORM="linux/amd64"
+ARG TARGETPLATFORM
 
 LABEL maintainer="Ben Green <ben@bcgdesign.com>" \
     org.label-schema.name="Alpine + S6" \
@@ -19,6 +19,7 @@ RUN apk -U upgrade \
     && rm -rf /var/cache/apk/*
 
 COPY ./overlay /
+COPY ./3.13/repositories /etc/apk/repositories
 
 ARG S6_VERSION=2.2.0.1
 RUN chmod +x /tmp/install /usr/local/bin/_* \
