--- a/.github/workflows/build_3_13-dev.yml
+++ b/.github/workflows/build_3_13-dev.yml
@@ -40,6 +40,7 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
+            bcgdesign/alpine-s6:dev
             bcgdesign/alpine-s6:dev-alpine-3.13
       -
         name: Image digest
