--- a/.github/workflows/build_3_12-main.yml
+++ b/.github/workflows/build_3_12-main.yml
@@ -54,6 +54,7 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bcgdesign/alpine-s6:alpine-3.12
+            bcgdesign/alpine-s6:alpine-3.12-${{ steps.version.outputs.content }}
             bcgdesign/alpine-s6:alpine-${{ steps.alpine_revision.outputs.content }}
       -
         name: Image digest
