--- a/Dockerfile-automated
+++ b/Dockerfile-automated
@@ -19,6 +19,8 @@ RUN chmod +x /tmp/install /usr/local/bin/_* \
 
 ENV \
     # cron log levels are from 0 (most verbose) to 8 (default)
-    CRON_LOG_LEVEL=8
+    CRON_LOG_LEVEL=8 \
+    # include hidden files and directories when fix-attrs.d processes them
+    S6_FIX_ATTRS_HIDDEN=1
 
 ENTRYPOINT [ "/init" ]
