Add S6_VERSION file Move set /tmp permissions to fix-attrs.d

--- a/3.13/Dockerfile
+++ b/3.13/Dockerfile
@@ -17,10 +17,10 @@ LABEL maintainer="Ben Green <ben@bcgdesign.com>" \
     org.label-schema.schema-version="1.0"
 
 COPY ./overlay /
+COPY ./S6_VERSION /tmp/S6_VERSION
 COPY ./3.13/repositories /etc/apk/repositories
 
-ARG S6_VERSION=2.2.0.1
-RUN chmod +x /tmp/install /usr/local/bin/bcg-* \
+RUN chmod +x /tmp/install \
     && /tmp/install \
     && bcg-clear
 
