--- a/Dockerfile-automated
+++ b/Dockerfile-automated
@@ -9,13 +9,12 @@ LABEL maintainer="Ben Green <ben@bcgdesign.com>" \
     org.label-schema.schema-version="1.0"
 
 COPY ./overlay /
+COPY ./S6_VERSION /tmp/S6_VERSION
 COPY ./3.13/repositories /etc/apk/repositories
 
-ARG S6_VERSION=2.2.0.1
-RUN chmod +x /tmp/install /usr/local/bin/bcg-* \
+RUN chmod +x /tmp/install \
     && /tmp/install \
-    && rm -rf /tmp/* \
-    && chmod a=rwx,u+t /tmp
+    && bcg-clear
 
 ENV \
     # cron log levels are from 0 (most verbose) to 8 (default)
