--- a/Dockerfile-automated
+++ b/Dockerfile-automated
@@ -17,8 +17,6 @@ ENV \
 COPY ./overlay /
 COPY ./3.13/repositories /etc/apk/repositories
 
-RUN chmod +x /tmp/install \
-    && /tmp/install \
-    && bcg-clear
+RUN bcg-install
 
 ENTRYPOINT [ "/init" ]
