Moving make bcg- executables executable to Dockerfile

--- a/3.13/Dockerfile
+++ b/3.13/Dockerfile
@@ -25,6 +25,6 @@ ENV \
 COPY ./overlay /
 COPY ./3.13/repositories /etc/apk/repositories
 
-RUN bcg-install
+RUN chmod +x /usr/local/bin/bcg-* && bcg-install
 
 ENTRYPOINT [ "/init" ]
