--- a/Dockerfile-automated
+++ b/Dockerfile-automated
@@ -17,6 +17,7 @@ ENV \
 COPY ./overlay /
 COPY ./3.13/repositories /etc/apk/repositories
 
-RUN chmod +x /usr/local/bin/bcg-* && bcg-install
+RUN chmod +x /usr/local/bin/bcg-*
+RUN bcg-install
 
 ENTRYPOINT [ "/init" ]
