--- a/Dockerfile-automated
+++ b/Dockerfile-automated
@@ -22,4 +22,6 @@ COPY ./3.13/repositories /etc/apk/repositories
 RUN chmod +x /usr/local/bin/bcg-*
 RUN bcg-install
 
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=5 CMD [ "healthcheck" ]
+
 ENTRYPOINT [ "/init" ]
