--- a/.github/workflows/build_3_12-main.yml
+++ b/.github/workflows/build_3_12-main.yml
@@ -10,6 +10,7 @@ on:
       - '.github/workflows/build_3_12-main.yml'
       - '3.12/**'
       - 'overlay/**'
+      - 'Dockerfile'
       - 'VERSION'
 
 jobs:
