--- a/Dockerfile-automated
+++ b/Dockerfile-automated
@@ -8,19 +8,20 @@ LABEL maintainer="Ben Green <ben@bcgdesign.com>" \
     org.label-schema.vendor="Ben Green" \
     org.label-schema.schema-version="1.0"
 
-COPY ./overlay /
-COPY ./3.13/repositories /etc/apk/repositories
-
-ARG S6_VERSION=2.2.0.1
-RUN chmod +x /tmp/install /usr/local/bin/bcg-* \
-    && /tmp/install \
-    && rm -rf /tmp/* \
-    && chmod a=rwx,u+t /tmp
-
 ENV \
+    # set to 0 to disable additional log output
+    DEBUG=1 \
     # cron log levels are from 0 (most verbose) to 8 (default)
     CRON_LOG_LEVEL=8 \
     # include hidden files and directories when fix-attrs.d processes them
     S6_FIX_ATTRS_HIDDEN=1
+
+COPY ./overlay /
+COPY ./3.13/repositories /etc/apk/repositories
+
+RUN chmod +x /usr/local/bin/bcg-*
+RUN bcg-install
+
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=5 CMD [ "healthcheck" ]
 
 ENTRYPOINT [ "/init" ]
