--- a/.github/workflows/publish-main-3_12.yml
+++ b/.github/workflows/publish-main-3_12.yml
@@ -1,4 +1,4 @@
-name: 3.13-main
+name: publish-main-3_12
 
 on:
   push:
@@ -7,13 +7,13 @@ on:
     tags-ignore:
       - '**'
     paths:
-      - '.github/workflows/build_3_13-main.yml'
-      - '3.13/**'
+      - '.github/workflows/publish-main-3_12.yml'
+      - '3.12/**'
       - 'overlay/**'
       - 'VERSION'
 
 jobs:
-  3_13-main:
+  publish-main-3_12:
     runs-on: ubuntu-latest
     steps:
       -
@@ -23,7 +23,7 @@ jobs:
         name: Read Alpine version - revision
         uses: bencgreen/read-file-action@v1
         with:
-          path: ./3.13/ALPINE_REVISION
+          path: ./3.12/ALPINE_REVISION
         id: alpine_revision
       -
         name: Read image version
@@ -49,14 +49,12 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./3.13/Dockerfile
+          file: ./3.12/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:latest
-            bcgdesign/alpine-s6:${{ steps.version.outputs.content }}
-            bcgdesign/alpine-s6:alpine-3.13
-            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine-3.12
+            bcgdesign/alpine-s6:alpine-3.12-${{ steps.version.outputs.content }}
             bcgdesign/alpine-s6:alpine-${{ steps.alpine_revision.outputs.content }}
       -
         name: Image digest
