--- a/.github/workflows/publish-main-3_13.yml
+++ b/.github/workflows/publish-main-3_13.yml
@@ -1,24 +1,30 @@
-name: 3.12-dev
+name: publish-main-3_13
 
 on:
   push:
-    branches-ignore:
+    branches:
       - 'main'
     tags-ignore:
       - '**'
     paths:
-      - '.github/workflows/build_3_12-dev.yml'
-      - '3.12/**'
+      - '.github/workflows/publish-main-3_13.yml'
+      - '3.13/**'
       - 'overlay/**'
       - 'VERSION'
 
 jobs:
-  3_12-dev:
+  publish-main-3_13:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout code
         uses: actions/checkout@v2
+      -
+        name: Read Alpine version - revision
+        uses: bencgreen/read-file-action@v1
+        with:
+          path: ./3.13/ALPINE_REVISION
+        id: alpine_revision
       -
         name: Read image version
         uses: bencgreen/read-file-action@v1
@@ -43,12 +49,15 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./3.12/Dockerfile
+          file: ./3.13/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:dev-alpine-3.12
-            bcgdesign/alpine-s6:alpine-3.12-${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:latest
+            bcgdesign/alpine-s6:${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine-3.13
+            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine-${{ steps.alpine_revision.outputs.content }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
