--- a/.github/workflows/publish-dev-3_12.yml
+++ b/.github/workflows/publish-dev-3_12.yml
@@ -47,8 +47,8 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:dev-alpine-3.12
-            bcgdesign/alpine-s6:alpine-3.12-${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine-3.12-dev
+            bcgdesign/alpine-s6:alpine-3.12-${{ steps.version.outputs.content }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
