--- a/.github/workflows/publish-dev-3_13.yml
+++ b/.github/workflows/publish-dev-3_13.yml
@@ -48,8 +48,8 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bcgdesign/alpine-s6:dev
-            bcgdesign/alpine-s6:dev-alpine-3.13
-            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine-3.13-dev
+            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version.outputs.content }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
