--- a/.github/workflows/publish-dev-3_12.yml
+++ b/.github/workflows/publish-dev-3_12.yml
@@ -1,4 +1,4 @@
-name: publish-dev-3_12
+name: publish-dev-3_12_name
 
 on:
   push:
@@ -13,7 +13,7 @@ on:
       - 'VERSION'
 
 jobs:
-  publish-dev-3_12:
+  publish-dev-3_12_job:
     runs-on: ubuntu-latest
     steps:
       -
