--- a/.github/workflows/dev-3_12.yml
+++ b/.github/workflows/dev-3_12.yml
@@ -1,30 +1,30 @@
-name: publish-main-3_13
+name: dev-3_12
 
 on:
   push:
-    branches:
+    branches-ignore:
       - 'main'
     tags-ignore:
       - '**'
     paths:
-      - '.github/workflows/publish-main-3_13.yml'
-      - '3.13/**'
+      - '.github/workflows/dev-3_12.yml'
+      - '3.12/**'
       - 'overlay/**'
       - 'VERSION'
 
 jobs:
-  publish-main-3_13:
+  test-3_12:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout code
         uses: actions/checkout@v2
+  build-3_12:
+    runs-on: ubuntu-latest
+    steps:
       -
-        name: Read Alpine version - revision
-        uses: bencgreen/read-file-action@v1
-        with:
-          path: ./3.13/ALPINE_REVISION
-        id: alpine_revision
+        name: Checkout code
+        uses: actions/checkout@v2
       -
         name: Read image version
         uses: bencgreen/read-file-action@v1
@@ -49,15 +49,12 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./3.13/Dockerfile
+          file: ./3.12/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:latest
-            bcgdesign/alpine-s6:${{ steps.version.outputs.content }}
-            bcgdesign/alpine-s6:alpine-3.13
-            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version.outputs.content }}
-            bcgdesign/alpine-s6:alpine-${{ steps.alpine_revision.outputs.content }}
+            bcgdesign/alpine-s6:alpine-3.12-dev
+            bcgdesign/alpine-s6:alpine-3.12-${{ steps.version.outputs.content }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
