--- a/.github/workflows/publish-3_13.yml
+++ b/.github/workflows/publish-3_13.yml
@@ -1,24 +1,30 @@
-name: publish-dev-3_13
+name: publish-3_13
 
 on:
   push:
-    branches-ignore:
+    branches:
       - 'main'
     tags-ignore:
       - '**'
     paths:
-      - '.github/workflows/publish-dev-3_13.yml'
+      - '.github/workflows/publish-3_13.yml'
       - '3.13/**'
       - 'overlay/**'
       - 'VERSION'
 
 jobs:
-  publish-dev-3_13:
+  publish-3_13:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout code
         uses: actions/checkout@v2
+      -
+        name: Read Alpine version - revision
+        uses: bencgreen/read-file-action@v1
+        with:
+          path: ./3.13/ALPINE_REVISION
+        id: alpine_revision
       -
         name: Read image version
         uses: bencgreen/read-file-action@v1
@@ -47,9 +53,11 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:dev
-            bcgdesign/alpine-s6:alpine-3.13-dev
-            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version.outputs.content }}-beta
+            bcgdesign/alpine-s6:latest
+            bcgdesign/alpine-s6:${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine-3.13
+            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine-${{ steps.alpine_revision.outputs.content }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
