--- a/.github/workflows/dev-3_12.yml
+++ b/.github/workflows/dev-3_12.yml
@@ -1,4 +1,4 @@
-name: 3.13-dev
+name: dev-3_12
 
 on:
   push:
@@ -7,13 +7,19 @@ on:
     tags-ignore:
       - '**'
     paths:
-      - '.github/workflows/build_3_13-dev.yml'
-      - '3.13/**'
+      - '.github/workflows/dev-3_12.yml'
+      - '3.12/**'
       - 'overlay/**'
       - 'VERSION'
 
 jobs:
-  main:
+  test-3_12:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout code
+        uses: actions/checkout@v2
+  build-3_12:
     runs-on: ubuntu-latest
     steps:
       -
@@ -43,13 +49,12 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./3.13/Dockerfile
+          file: ./3.12/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:dev
-            bcgdesign/alpine-s6:dev-alpine-3.13
-            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine-3.12-dev
+            bcgdesign/alpine-s6:alpine-3.12-${{ steps.version.outputs.content }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
