--- a/.github/workflows/publish-3_12.yml
+++ b/.github/workflows/publish-3_12.yml
@@ -1,24 +1,30 @@
-name: 3.12-dev
+name: publish-3_12
 
 on:
   push:
-    branches-ignore:
+    branches:
       - 'main'
     tags-ignore:
       - '**'
     paths:
-      - '.github/workflows/build_3_12-dev.yml'
+      - '.github/workflows/publish-3_12.yml'
       - '3.12/**'
       - 'overlay/**'
       - 'VERSION'
 
 jobs:
-  main:
+  publish-3_12:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout code
         uses: actions/checkout@v2
+      -
+        name: Read Alpine version - revision
+        uses: bencgreen/read-file-action@v1
+        with:
+          path: ./3.12/ALPINE_REVISION
+        id: alpine_revision
       -
         name: Read image version
         uses: bencgreen/read-file-action@v1
@@ -47,8 +53,9 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:dev-alpine-3.12
+            bcgdesign/alpine-s6:alpine-3.12
             bcgdesign/alpine-s6:alpine-3.12-${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine-${{ steps.alpine_revision.outputs.content }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
