--- a/.github/workflows/dev-3_13.yml
+++ b/.github/workflows/dev-3_13.yml
@@ -19,12 +19,26 @@ jobs:
       -
         name: Checkout code
         uses: actions/checkout@v2
+      -
+        name: Install dependencies
+        run: |
+          apt install -y curl
+      -
+        name: Run tests
+        run: |
+          ./tests/run.sh
   build-3_13:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout code
         uses: actions/checkout@v2
+      -
+        name: Read image version
+        uses: bencgreen/read-file-action@v1
+        with:
+          path: ./VERSION_MINOR
+        id: version_minor
       -
         name: Read image version
         uses: bencgreen/read-file-action@v1
@@ -55,6 +69,7 @@ jobs:
           tags: |
             bcgdesign/alpine-s6:dev
             bcgdesign/alpine-s6:alpine-3.13-dev
+            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version_minor.outputs.content }}-beta
             bcgdesign/alpine-s6:alpine-3.13-${{ steps.version.outputs.content }}-beta
       -
         name: Image digest
