--- a/.github/workflows/main-3_12.yml
+++ b/.github/workflows/main-3_12.yml
@@ -1,4 +1,4 @@
-name: publish-3_12
+name: main-3_12
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     tags-ignore:
       - '**'
     paths:
-      - '.github/workflows/publish-3_12.yml'
+      - '.github/workflows/main-3_12.yml'
       - '3.12/**'
       - 'overlay/**'
       - 'VERSION'
@@ -25,6 +25,12 @@ jobs:
         with:
           path: ./3.12/ALPINE_REVISION
         id: alpine_revision
+      -
+        name: Read image version
+        uses: bencgreen/read-file-action@v1
+        with:
+          path: ./VERSION_MINOR
+        id: version_minor
       -
         name: Read image version
         uses: bencgreen/read-file-action@v1
@@ -54,6 +60,7 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bcgdesign/alpine-s6:alpine-3.12
+            bcgdesign/alpine-s6:alpine-3.12-${{ steps.version_minor.outputs.content }}
             bcgdesign/alpine-s6:alpine-3.12-${{ steps.version.outputs.content }}
             bcgdesign/alpine-s6:alpine-${{ steps.alpine_revision.outputs.content }}
       -
