--- a/.github/workflows/dev-3_12.yml
+++ b/.github/workflows/dev-3_12.yml
@@ -22,7 +22,7 @@ jobs:
       -
         name: Install dependencies
         run: |
-          apt-get install -y curl
+          sudo apt-get install -y curl
       -
         name: Run tests
         run: |
