--- a/.github/workflows/dev-3_12.yml
+++ b/.github/workflows/dev-3_12.yml
@@ -20,15 +20,9 @@ jobs:
         name: Checkout code
         uses: actions/checkout@v2
       -
-        name: Install dependencies
-        run: |
-          sudo apt-get install -y curl
-      -
         name: Run tests
         run: |
-          RUN=./tests/run.sh \
-          && chmod +x ${RUN} \
-          && ${RUN}
+          cd /tests && chmod +x run.sh && run.sh
   build-3_12:
     runs-on: ubuntu-latest
     steps:
