--- a/.github/workflows/dev-3_13.yml
+++ b/.github/workflows/dev-3_13.yml
@@ -22,7 +22,7 @@ jobs:
       -
         name: Run tests
         run: |
-          cd ./tests && chmod +x run.sh && run.sh
+          RUN=./tests/run.sh && chmod +x ${RUN} && ${RUN}
   build-3_13:
     runs-on: ubuntu-latest
     steps:
