--- a/.github/workflows/dev-3_13.yml
+++ b/.github/workflows/dev-3_13.yml
@@ -10,6 +10,7 @@ on:
       - '.github/workflows/dev-3_13.yml'
       - '3.13/**'
       - 'overlay/**'
+      - 'tests/**'
       - 'VERSION'
 
 jobs:
