--- a/.github/workflows/dev-3_12.yml
+++ b/.github/workflows/dev-3_12.yml
@@ -21,9 +21,16 @@ jobs:
         name: Checkout code
         uses: actions/checkout@v2
       -
+        name: Checkout shUnit2
+        uses: actions/checkout@v2
+        with:
+          repository: kward/shunit2
+          ref: v2.1.8
+          path: ./shunit2
+      -
         name: Run tests
         run: |
-          RUN=./tests/run.sh && chmod +x ${RUN} && ${RUN}
+          RUN=./tests/run-git.sh && chmod +x ${RUN} && ${RUN}
   build-3_12:
     runs-on: ubuntu-latest
     steps:
