--- a/.github/workflows/dev-3_12.yml
+++ b/.github/workflows/dev-3_12.yml
@@ -10,6 +10,7 @@ on:
       - '.github/workflows/dev-3_12.yml'
       - '3.12/**'
       - 'overlay/**'
+      - 'tests/**'
       - 'VERSION'
 
 jobs:
@@ -19,12 +20,29 @@ jobs:
       -
         name: Checkout code
         uses: actions/checkout@v2
+      -
+        name: Checkout shUnit2
+        uses: actions/checkout@v2
+        with:
+          repository: kward/shunit2
+          ref: v2.1.8
+          path: ./shunit2
+      -
+        name: Run tests
+        run: |
+          RUN=./tests/run-git.sh && chmod +x ${RUN} && ${RUN}
   build-3_12:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout code
         uses: actions/checkout@v2
+      -
+        name: Read image version
+        uses: bencgreen/read-file-action@v1
+        with:
+          path: ./VERSION_MINOR
+        id: version_minor
       -
         name: Read image version
         uses: bencgreen/read-file-action@v1
@@ -54,6 +72,7 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bcgdesign/alpine-s6:alpine-3.12-dev
+            bcgdesign/alpine-s6:alpine-3.12-${{ steps.version_minor.outputs.content }}-beta
             bcgdesign/alpine-s6:alpine-3.12-${{ steps.version.outputs.content }}-beta
       -
         name: Image digest
