--- a/.github/workflows/dev-3_13.yml
+++ b/.github/workflows/dev-3_13.yml
@@ -10,6 +10,7 @@ on:
       - '.github/workflows/dev-3_13.yml'
       - '3.13/**'
       - 'overlay/**'
+      - 'tests/**'
       - 'VERSION'
 
 jobs:
@@ -19,12 +20,29 @@ jobs:
       -
         name: Checkout code
         uses: actions/checkout@v2
+      -
+        name: Checkout shUnit2
+        uses: actions/checkout@v2
+        with:
+          repository: kward/shunit2
+          ref: v2.1.8
+          path: ./shunit2
+      -
+        name: Run tests
+        run: |
+          RUN=./tests/run-git.sh && chmod +x ${RUN} && ${RUN}
   build-3_13:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout code
         uses: actions/checkout@v2
+      -
+        name: Read image version
+        uses: bencgreen/read-file-action@v1
+        with:
+          path: ./VERSION_MINOR
+        id: version_minor
       -
         name: Read image version
         uses: bencgreen/read-file-action@v1
@@ -55,6 +73,7 @@ jobs:
           tags: |
             bcgdesign/alpine-s6:dev
             bcgdesign/alpine-s6:alpine-3.13-dev
+            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version_minor.outputs.content }}-beta
             bcgdesign/alpine-s6:alpine-3.13-${{ steps.version.outputs.content }}-beta
       -
         name: Image digest
