--- a/.github/workflows/main-alpine3_13.yml
+++ b/.github/workflows/main-alpine3_13.yml
@@ -1,16 +1,8 @@
 name: main-alpine3_13
 
 on:
-  push:
-    branches:
-      - 'main'
-    tags-ignore:
-      - '**'
-    paths:
-      - '.github/workflows/main-alpine3_13.yml'
-      - '3.13/**'
-      - 'overlay/**'
-      - 'VERSION'
+  release:
+    types: [published]
 
 jobs:
   publish-alpine3_13:
