--- a/.github/workflows/publish-alpine3_13.yml
+++ b/.github/workflows/publish-alpine3_13.yml
@@ -1,19 +1,11 @@
-name: main-alpine3_12
+name: publish-alpine3_13
 
 on:
-  push:
-    branches:
-      - 'main'
-    tags-ignore:
-      - '**'
-    paths:
-      - '.github/workflows/main-alpine3_12.yml'
-      - '3.12/**'
-      - 'overlay/**'
-      - 'VERSION'
+  release:
+    types: [published]
 
 jobs:
-  publish-alpine3_12:
+  publish-alpine3_13:
     runs-on: ubuntu-latest
     steps:
       -
@@ -23,7 +15,7 @@ jobs:
         name: Read Alpine version - revision
         uses: bencgreen/read-file-action@v1
         with:
-          path: ./3.12/ALPINE_REVISION
+          path: ./3.13/ALPINE_REVISION
         id: alpine_revision
       -
         name: Read image version
@@ -55,13 +47,16 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./3.12/Dockerfile
+          file: ./3.13/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:alpine3.12
-            bcgdesign/alpine-s6:alpine3.12-${{ steps.version_minor.outputs.content }}
-            bcgdesign/alpine-s6:alpine3.12-${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:latest
+            bcgdesign/alpine-s6:${{ steps.version_minor.outputs.content }}
+            bcgdesign/alpine-s6:${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine3.13
+            bcgdesign/alpine-s6:alpine3.13-${{ steps.version_minor.outputs.content }}
+            bcgdesign/alpine-s6:alpine3.13-${{ steps.version.outputs.content }}
             bcgdesign/alpine-s6:alpine${{ steps.alpine_revision.outputs.content }}
       -
         name: Image digest
