--- a/edge/Dockerfile
+++ b/edge/Dockerfile
@@ -25,7 +25,7 @@ ENV \
     S6_FIX_ATTRS_HIDDEN=1
 
 COPY ./overlay /
-COPY ./3.13/repositories /etc/apk/repositories
+COPY ./edge/repositories /etc/apk/repositories
 
 RUN chmod +x /usr/local/bin/bcg-*
 RUN bcg-install
