--- a/Dockerfile-automated
+++ b/Dockerfile-automated
@@ -20,7 +20,7 @@ COPY ./overlay /
 COPY ./3.13/repositories /etc/apk/repositories
 
 RUN chmod +x /usr/local/bin/bcg-*
-RUN bcg-install
+RUN bf-install
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=5 CMD [ "healthcheck" ]
 
