--- a/.github/workflows/publish-alpine3_12.yml
+++ b/.github/workflows/publish-alpine3_12.yml
@@ -56,6 +56,10 @@ jobs:
             bcgdesign/alpine-s6:alpine3.12-${{ steps.version_minor.outputs.content }}
             bcgdesign/alpine-s6:alpine3.12-${{ steps.version.outputs.content }}
             bcgdesign/alpine-s6:alpine${{ steps.alpine_revision.outputs.content }}
+            bfren/alpine-s6:alpine3.12
+            bfren/alpine-s6:alpine3.12-${{ steps.version_minor.outputs.content }}
+            bfren/alpine-s6:alpine3.12-${{ steps.version.outputs.content }}
+            bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.content }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
