--- a/.github/workflows/dev-alpine3_13.yml
+++ b/.github/workflows/dev-alpine3_13.yml
@@ -70,6 +70,10 @@ jobs:
             bcgdesign/alpine-s6:alpine3.13-dev
             bcgdesign/alpine-s6:alpine3.13-${{ steps.version_minor.outputs.content }}-beta
             bcgdesign/alpine-s6:alpine3.13-${{ steps.version.outputs.content }}-beta
+            bfren/alpine-s6:dev
+            bfren/alpine-s6:alpine3.13-dev
+            bfren/alpine-s6:alpine3.13-${{ steps.version_minor.outputs.content }}-beta
+            bfren/alpine-s6:alpine3.13-${{ steps.version.outputs.content }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
