--- a/.github/workflows/dev-alpineedge.yml
+++ b/.github/workflows/dev-alpineedge.yml
@@ -69,6 +69,9 @@ jobs:
             bcgdesign/alpine-s6:alpineedge-dev
             bcgdesign/alpine-s6:alpineedge-${{ steps.version_minor.outputs.content }}-beta
             bcgdesign/alpine-s6:alpineedge-${{ steps.version.outputs.content }}-beta
+            bfren/alpine-s6:alpineedge-dev
+            bfren/alpine-s6:alpineedge-${{ steps.version_minor.outputs.content }}-beta
+            bfren/alpine-s6:alpineedge-${{ steps.version.outputs.content }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
