--- a/.github/workflows/publish-alpineedge.yml
+++ b/.github/workflows/publish-alpineedge.yml
@@ -49,6 +49,9 @@ jobs:
             bcgdesign/alpine-s6:alpineedge
             bcgdesign/alpine-s6:alpineedge-${{ steps.version_minor.outputs.content }}
             bcgdesign/alpine-s6:alpineedge-${{ steps.version.outputs.content }}
+            bfren/alpine-s6:alpineedge
+            bfren/alpine-s6:alpineedge-${{ steps.version_minor.outputs.content }}
+            bfren/alpine-s6:alpineedge-${{ steps.version.outputs.content }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
