--- a/.github/workflows/publish-alpine3_14.yml
+++ b/.github/workflows/publish-alpine3_14.yml
@@ -1,37 +1,23 @@
-name: dev-alpine3_13
+name: publish-alpine3_14
 
 on:
-  push:
-    branches-ignore:
-      - 'main'
-    tags-ignore:
-      - '**'
+  release:
+    types: [published]
   workflow_dispatch:
 
 jobs:
-  test-alpine3_13:
+  publish-alpine3_14:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout code
         uses: actions/checkout@v2
       -
-        name: Checkout shUnit2
-        uses: actions/checkout@v2
+        name: Read Alpine version - revision
+        uses: bfren/read-file-action@v1
         with:
-          repository: kward/shunit2
-          ref: v2.1.8
-          path: ./shunit2
-      -
-        name: Run tests
-        run: |
-          RUN=./tests/run-git.sh && chmod +x ${RUN} && ${RUN}
-  build-alpine3_13:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout code
-        uses: actions/checkout@v2
+          path: ./3.14/ALPINE_REVISION
+        id: alpine_revision
       -
         name: Read image version
         uses: bfren/read-file-action@v1
@@ -62,13 +48,17 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./3.13/Dockerfile
+          file: ./3.14/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bfren/alpine-s6:alpine3.13-dev
-            bfren/alpine-s6:alpine3.13-${{ steps.version_minor.outputs.content }}-beta
-            bfren/alpine-s6:alpine3.13-${{ steps.version.outputs.content }}-beta
+            bfren/alpine-s6:latest
+            bfren/alpine-s6:${{ steps.version_minor.outputs.content }}
+            bfren/alpine-s6:${{ steps.version.outputs.content }}
+            bfren/alpine-s6:alpine3.14
+            bfren/alpine-s6:alpine3.14-${{ steps.version_minor.outputs.content }}
+            bfren/alpine-s6:alpine3.14-${{ steps.version.outputs.content }}
+            bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.content }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
