--- a/.github/workflows/dev-alpineedge.yml
+++ b/.github/workflows/dev-alpineedge.yml
@@ -67,8 +67,8 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bfren/alpine-s6:alpineedge-dev
-            bfren/alpine-s6:alpineedge-${{ steps.version_minor.outputs.content }}-beta
-            bfren/alpine-s6:alpineedge-${{ steps.version.outputs.content }}-beta
+            bfren/alpine-s6:alpineedge-${{ steps.version_minor.outputs.contents }}-beta
+            bfren/alpine-s6:alpineedge-${{ steps.version.outputs.contents }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
