--- a/.github/workflows/publish-alpine3_14.yml
+++ b/.github/workflows/publish-alpine3_14.yml
@@ -53,12 +53,12 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bfren/alpine-s6:latest
-            bfren/alpine-s6:${{ steps.version_minor.outputs.content }}
-            bfren/alpine-s6:${{ steps.version.outputs.content }}
+            bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}
+            bfren/alpine-s6:${{ steps.version.outputs.contents }}
             bfren/alpine-s6:alpine3.14
-            bfren/alpine-s6:alpine3.14-${{ steps.version_minor.outputs.content }}
-            bfren/alpine-s6:alpine3.14-${{ steps.version.outputs.content }}
-            bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.content }}
+            bfren/alpine-s6:alpine3.14-${{ steps.version_minor.outputs.contents }}
+            bfren/alpine-s6:alpine3.14-${{ steps.version.outputs.contents }}
+            bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
