--- a/.github/workflows/publish-alpine3_13.yml
+++ b/.github/workflows/publish-alpine3_13.yml
@@ -16,7 +16,7 @@ jobs:
         name: Read Alpine version - revision
         uses: bfren/read-file@v1
         with:
-          path: ./3.13/ALPINE_REVISION
+          file: ./3.13/ALPINE_REVISION
         id: alpine_revision
       -
         name: Read image version
