--- a/.github/workflows/publish-alpine3_12.yml
+++ b/.github/workflows/publish-alpine3_12.yml
@@ -22,6 +22,12 @@ jobs:
         name: Read image version
         uses: bfren/read-file@v1
         with:
+          file: ./VERSION_MAJOR
+        id: version_major
+      -
+        name: Read image version
+        uses: bfren/read-file@v1
+        with:
           file: ./VERSION_MINOR
         id: version_minor
       -
@@ -53,6 +59,7 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bfren/alpine-s6:alpine3.12
+            bfren/alpine-s6:alpine3.12-${{ steps.version_major.outputs.contents }}
             bfren/alpine-s6:alpine3.12-${{ steps.version_minor.outputs.contents }}
             bfren/alpine-s6:alpine3.12-${{ steps.version.outputs.contents }}
             bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
