--- a/.github/workflows/publish-alpineedge.yml
+++ b/.github/workflows/publish-alpineedge.yml
@@ -16,6 +16,12 @@ jobs:
         name: Read image version
         uses: bfren/read-file@v1
         with:
+          file: ./VERSION_MAJOR
+        id: version_major
+      -
+        name: Read image version
+        uses: bfren/read-file@v1
+        with:
           file: ./VERSION_MINOR
         id: version_minor
       -
@@ -47,6 +53,7 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bfren/alpine-s6:alpineedge
+            bfren/alpine-s6:alpineedge-${{ steps.version_major.outputs.contents }}
             bfren/alpine-s6:alpineedge-${{ steps.version_minor.outputs.contents }}
             bfren/alpine-s6:alpineedge-${{ steps.version.outputs.contents }}
       -
