--- a/.github/workflows/dev-alpine3_15.yml
+++ b/.github/workflows/dev-alpine3_15.yml
@@ -1,4 +1,4 @@
-name: dev-alpine3_14
+name: dev-alpine3_15
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test-alpine3_14:
+  test-alpine3_15:
     runs-on: ubuntu-latest
     steps:
       -
@@ -24,7 +24,7 @@ jobs:
         name: Run tests
         run: |
           RUN=./tests/run-git.sh && chmod +x ${RUN} && ${RUN}
-  build-alpine3_14:
+  build-alpine3_15:
     runs-on: ubuntu-latest
     steps:
       -
@@ -60,13 +60,14 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./3.14/Dockerfile
+          file: ./3.15/Dockerfile
           push: ${{ startsWith(github.ref, 'refs/heads/') }}
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bfren/alpine-s6:alpine3.14-dev
-            bfren/alpine-s6:alpine3.14-${{ steps.version_minor.outputs.contents }}-beta
-            bfren/alpine-s6:alpine3.14-${{ steps.version.outputs.contents }}-beta
+            bfren/alpine-s6:dev
+            bfren/alpine-s6:alpine3.15-dev
+            bfren/alpine-s6:alpine3.15-${{ steps.version_minor.outputs.contents }}-beta
+            bfren/alpine-s6:alpine3.15-${{ steps.version.outputs.contents }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
