--- a/.github/workflows/publish-alpine3_15.yml
+++ b/.github/workflows/publish-alpine3_15.yml
@@ -1,35 +1,29 @@
-name: dev-alpine3_14
+name: publish-alpine3_15
 
 on:
-  push:
-    branches: ['**']
-    tags-ignore: ['**']
+  release:
+    types: [published]
   workflow_dispatch:
 
 jobs:
-  test-alpine3_14:
+  publish-alpine3_15:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout code
         uses: actions/checkout@v2
       -
-        name: Checkout shUnit2
-        uses: actions/checkout@v2
+        name: Read Alpine version - revision
+        uses: bfren/read-file@v1
         with:
-          repository: kward/shunit2
-          ref: v2.1.8
-          path: ./shunit2
+          file: ./3.15/ALPINE_REVISION
+        id: alpine_revision
       -
-        name: Run tests
-        run: |
-          RUN=./tests/run-git.sh && chmod +x ${RUN} && ${RUN}
-  build-alpine3_14:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout code
-        uses: actions/checkout@v2
+        name: Read image version
+        uses: bfren/read-file@v1
+        with:
+          file: ./VERSION_MAJOR
+        id: version_major
       -
         name: Read image version
         uses: bfren/read-file@v1
@@ -60,13 +54,19 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./3.14/Dockerfile
-          push: ${{ startsWith(github.ref, 'refs/heads/') }}
+          file: ./3.15/Dockerfile
+          push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bfren/alpine-s6:alpine3.14-dev
-            bfren/alpine-s6:alpine3.14-${{ steps.version_minor.outputs.contents }}-beta
-            bfren/alpine-s6:alpine3.14-${{ steps.version.outputs.contents }}-beta
+            bfren/alpine-s6:latest
+            bfren/alpine-s6:${{ steps.version_major.outputs.contents }}
+            bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}
+            bfren/alpine-s6:${{ steps.version.outputs.contents }}
+            bfren/alpine-s6:alpine3.15
+            bfren/alpine-s6:alpine3.15-${{ steps.version_major.outputs.contents }}
+            bfren/alpine-s6:alpine3.15-${{ steps.version_minor.outputs.contents }}
+            bfren/alpine-s6:alpine3.15-${{ steps.version.outputs.contents }}
+            bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
